Tweaked about page

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
 <p>I work as a programmer at
   <a href="http://www.gitorious.com">Gitorious</a>.</p>
 
-<p> My current interests include high level programming
-  languages, software entrepreneurship, user interface design and
-  pragmatic development methods.  </p>
+<p> My current interests include entrepreneurship, design, linux, high
+  level programming languages and pragmatic development
+  methods.</p>
 
 <p>My free time is spent on my wife and two daughters,
   <a href="/portfolio.php">programming</a>, drawing, 
   some <a href="http://www.sentrumaikido.org">Aikido</a> and the
   occasional video game.
 </p>
+
 
