--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 <p>I work as a programmer at
   <a href="http://www.gitorious.com">Gitorious</a>.</p>
 
-<p> My current interests include entrepreneurship, design, linux, high
+<p> My current interests include entrepreneurship, design, Linux, high
   level programming languages and pragmatic development
   methods.</p>
 
@@ -15,5 +15,3 @@
   some <a href="http://www.sentrumaikido.org">Aikido</a> and the
   occasional video game.
 </p>
-
-
