--- a/src/layout.html
+++ b/src/layout.html
@@ -13,7 +13,8 @@
 
     <div id="navbar">
       <ul>
-        <li><a href="index.html">About</a></li>
+	<li><a href="index.html">Blog</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
