--- a/src/layout.html
+++ b/src/layout.html
@@ -14,6 +14,7 @@
     <div id="navbar">
       <ul>
 	<li><a href="index.html">Blog</a></li>
+	<li><a href="archive.html">Archive</a></li>	
         <li><a href="about.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
