--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"> 
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+    <link rel="alternate" type="application/atom+xml" href="http://www.kjeldahlnilsson.net/atom.xml" title="Atom 1.0">
     <title>Thomas Kjeldahl Nilsson</title>
   </head>
 
@@ -18,6 +19,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
+	<li><a href="http://feeds.feedburner.com/ThomasKjeldahlNilssonsBlog">Subscribe</a></li>
       </ul>
     </div>
     
