About page tweak

--- a/src/mainpages/about.html
+++ b/src/mainpages/about.html
@@ -2,10 +2,10 @@
 
 <p>I'm a software developer &mdash; I do things and make things.</p>
 
-<p>I work as a programmer at
-  <a href="http://www.gitorious.com">Gitorious</a>.</p>
+<p>I've earned my living in software since 1999, and I'm currently
+busy with <a href="http://www.gitorious.com">Gitorious</a>.</p>
 
-<p> My current interests include entrepreneurship, design, Linux, high
+<p> My current interests include entrepreneurship, design, Unix, high
   level programming languages and pragmatic development
   methods.</p>
 
