--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -21,6 +21,12 @@
         <li><a href="contact.html">Contact</a></li>
 	<li><a href="http://feeds.feedburner.com/ThomasKjeldahlNilssonsBlog">Subscribe</a></li>
       </ul>
+
+      <p>
+	<a href="https://twitter.com/thomanil" class="twitter-follow-button" data-show-count="false">Follow @thomanil</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      </p>
+      
     </div>
     
     <div id="content">
