--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -14,8 +14,8 @@
 
     <div id="navbar">
       <ul>
-	<li><a href="archive.html">Archive</a></li>	
         <li><a href="about.html">About</a></li>
+	<li><a href="archive.html">Archive</a></li>	
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
 	<li><a href="http://feeds.feedburner.com/ThomasKjeldahlNilssonsBlog">Subscribe</a></li>
@@ -25,10 +25,9 @@
 	<a href="https://twitter.com/thomanil" class="twitter-follow-button" data-show-count="false">Follow @thomanil</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </p>
-      
     </div>
     
-    <div id="content">
+    <div id="main">
       ***CONTENT***
     </div>
 
