Forgot to commit

--- a/src/mainpages/about.html
+++ b/src/mainpages/about.html
@@ -2,16 +2,14 @@
 
 <p>I'm a software developer &mdash; I do things and make things.</p>
 
-<p>I've earned my living in software since 1999, and I'm currently
- keeping busy contributing to
- the <a href="http://gitorious.org/gitorious">Gitorious project</a>,
- as well as building a viable business
- at <a href="http://www.gitorious.com">Gitorious AS</a>.</p>
+<p>I've earned my living in software since 1999. I'm currently working
+on Android (and mobile web) development at <a href="http://www.shortcut.no">Shortcut AS.</a>
+</p>
+
 
 <p>My current interests include entrepreneurship, design, Unix, high
    level programming languages and pragmatic development methods.</p>
 
-<p>My free time is spent on my wife and two daughters,
-   <a href="/portfolio.php">programming</a>, drawing, and 
-   <a href="http://www.sentrumaikido.org">Aikido</a>.
+<p>My free time is spent on my wife and two daughters, beer brewing
+and <a href="http://www.sentrumaikido.org">Aikido</a>.
 </p>
