--- a/src/mainpages/cv.html
+++ b/src/mainpages/cv.html
@@ -30,23 +30,28 @@
 <tr><td width="30%"></td><td>
 
 <p>
-Strong software developer with over a decade of broad professional experience.
+Strong software developer with over a decade of broad professional
+experience. Doer and maker.
 </p>
 
 <p>
-Doer and maker. Gets things done while balancing short term tasks and tradeoffs with commercial "big picture".
+Main specialities include Android native mobile development plus
+JavaScript and Ruby for web/backend/automation.</p>
+
+</p>Experienced in both web, backend and mobile development. Worked in
+all phases of the software lifecycle, from conception to post-release
+maintenance.
 </p>
 
 <p>
-Experienced in both web, backend and mobile development. Worked in all phases of the software lifecycle, from conception to post-release maintenance.
+Hands-on experience in entrepreneurship, project management, product
+development, consulting and marketing. Basic skill in copywriting,
+visual design and user experience.
 </p>
 
 <p>
-Hands-on experience in entrepreneurship, project management, product development, consulting and marketing. Basic skills in copywriting, graphic design and user experience.
-</p>
-
-<p>
-Pragmatic, professional, effective. Great people skills, comfortable public speaker.
+Pragmatic, professional, effective. Great people skills, comfortable
+public speaker.
 </p>
 
 
@@ -85,15 +90,43 @@ and communicate.</p>
 <hr/>
 
 <table border="0" width="100%">
-<tr><td width="30%"><h3>2011-current</h3></td><td><h3>Gitorious AS</h3></td></tr>
-<tr><td width="30%"></td><td><strong>Partner. Programming, customer
-support, marketing, sales, product development.</strong></td></tr>
+<tr><td width="30%"><h3>2013-current</h3></td><td><h3>Shortcut AS</h3></td></tr>
+<tr><td width="30%"></td><td><strong>Developer</strong></td></tr>
 </table>
 
 
 <br/>
 
+<table border="0">
+<tr><td width="30%"></td><td>
+Recently joined the growing, dedicated Android team at Shortcut.
+</td></tr>
 
+</table>
+
+
+
+<table border="0" width="100%">
+<tr><td width="30%"><h3>2011-2013</h3></td><td><h3>Gitorious AS</h3></td></tr>
+<tr><td width="30%"></td><td><strong>Partner</strong></td></tr>
+</table>
+
+
+<br/>
+
+<table border="0">
+<tr><td width="30%"></td><td>
+Built up a fully open-source based, bootstrapped services/hosting
+startup together with two other partners. Handled programming,
+customer service, support, marketing, sales and product development
+tasks. The company was acquired by Powow AS in August 2013.
+</td></tr>
+
+
+</table>
+
+
+<br/>
 
 
 <table border="0" width="100%">
