--- a/src/mainpages/portfolio.html
+++ b/src/mainpages/portfolio.html
@@ -1,19 +1,23 @@
 
 <h1>Current projects</h1>
 
-<p>I'm a core commiter
-on <a href="http://gitorious.org/gitorious">Gitorious</a>, the open
-source git collaboration platform. I'm also a partner/co-owner
-at <a href="http://gitorious.com">Gitorious AS</a>, where we're busy
-building a business around selling Gitorious hosting and services to
-enterprise customers. For me, this is an ideal mix of entrepreneurship
-and software development.</p>
-
-<p>You can find my code
-  on <a href="http://github.com/thomanil">Github</a>. I occasionally
-  blog and speak publicly.</p>
+<p>I currently work on Android and mobile development at Shortcut
+AS. You can find my past and present code on <a href="http://github.com/thomanil">Github</a>. I
+occasionally blog and speak publicly.</p>
 
 <h1>Past projects</h1>
+
+<h2><a href="http://gitorious.org">Gitorious</a> (2011-2013)</h2>
+
+<p>For two years I was a core commiter
+on <a href="http://gitorious.org/gitorious">Gitorious</a>, the open
+source git collaboration platform. I was also partner/co-owner
+at <a href="http://gitorious.com">Gitorious AS</a>, where we
+bootstrapped a profitable business around selling Gitorious hosting
+and services to enterprise customers.</p>
+
+
+
 
 <h2><a href="http://mineverktoy.no">Mine Verktøy</a> (2011)</h2>
 
@@ -21,7 +25,7 @@ and software development.</p>
   Setup". For about a year during 2011 I published weekly interviews
   with norwegian techies and creatives about which software and
   hardware tools they use. Currently dormant.</p>
-  
+
 <h2><a href="http://thoughtmuse.com">ThoughtMuse</a> (2009)</h2>
 
 <p>Created an online
@@ -29,7 +33,7 @@ and software development.</p>
   JavaScript and Rails. Bootstrapped it from idea to launched product
   in 6 months. Didn't make a lot of money but learnt a lot about
   product development and entrepreneurship.</p>
-  
+
 <h2><a href="http://messynotebook.com/?p=71">QuickTetris</a> (2009)</h2>
 
 <p>I wrote a web-based Tetris
@@ -86,7 +90,7 @@ Needn't Hurt!</a> (2010)</h2>
     workshop down to a one hour talk, which I presented at a joint
     meetup of <a href="http://java.no/">javaBin</a>
     and <a href="http://www.meetup.com/framsia/">Framsia</a>.</p>
-  
+
 <h2><a href="https://github.com/thomanil/javascriptNeedntHurt">JavaScript
 Needn't Hurt!</a> (2010)</h2>
 
@@ -101,6 +105,6 @@ Needn't Hurt!</a> (2010)</h2>
     version <a href="http://vimeo.com/9453172">here</a>.</p>
 
 <h2>Pomodoro: En eggeklokke fikk produktet mitt ut døra (2009)</h2>
-    
+
 <p>Presented a lightning talk about the
     Pomodoro Technique at the Smidig2009 conference.</p>
