Update dead links

--- a/src/mainpages/portfolio.html
+++ b/src/mainpages/portfolio.html
@@ -19,7 +19,7 @@ and services to enterprise customers.</p>
 
 
 
-<h2><a href="http://mineverktoy.no">Mine Verktøy</a> (2011)</h2>
+<h2><a href="http://mineverktoy.com">Mine Verktøy</a> (2011)</h2>
 
 <p>The Norwegian version of "The
   Setup". For about a year during 2011 I published weekly interviews
@@ -34,7 +34,7 @@ and services to enterprise customers.</p>
   in 6 months. Didn't make a lot of money but learnt a lot about
   product development and entrepreneurship.</p>
 
-<h2><a href="http://messynotebook.com/?p=71">QuickTetris</a> (2009)</h2>
+<h2><a href="javascript-tetris-pt-1-rationale.html">QuickTetris</a> (2009)</h2>
 
 <p>I wrote a web-based Tetris
   clone in order to improve my grasp of frontend development. I also
