Added gdg talk to portfolio page

--- a/src/mainpages/portfolio.html
+++ b/src/mainpages/portfolio.html
@@ -5,6 +5,14 @@
 AS. You can find my past and present code on <a href="http://github.com/thomanil">Github</a>. I
 occasionally blog and speak publicly.</p>
 
+
+
+
+
+
+
+
+
 <h1>Past projects</h1>
 
 <h2><a href="http://gitorious.org">Gitorious</a> (2011-2013)</h2>
@@ -15,9 +23,6 @@ source git collaboration platform. I was also partner/co-owner
 at <a href="http://gitorious.com">Gitorious AS</a>, where we
 bootstrapped a profitable business around selling Gitorious hosting
 and services to enterprise customers.</p>
-
-
-
 
 <h2><a href="http://mineverktoy.com">Mine Verktøy</a> (2011)</h2>
 
@@ -47,10 +52,19 @@ and services to enterprise customers.</p>
 
 <h1>Presentations</h1>
 
+<h2>
+  <a href="http://kjeldahlnilsson.net/shared/go-for-web-stuff/index.html#/">Using Go for Web Services|Servers|Sites</a> (2014)
+</h2>
+
+<p>
+  At the <a href="http://www.meetup.com/GDGOslo/events/206577722/">GDG Oslo meetup</a> in late 2014 I gave an introduction to basic web
+  service implementation in Go, including the current common
+  frameworks, pros and cons of doing so.</p>
+
 <h2><a href="https://github.com/oslocodingdojo/osloCodingDojoApril2011">How
     Stateless Can You Go?</a> (2011)</h2>
 
-<p>  I was invited
+<p> I was invited
   to host a meetup
   of <a href="http://www.meetup.com/OsloCodingDojo/events/17242062/">Oslo
   Coding Dojo</a>. I created, presented and facilitated the group task
