Add gdg and webreb to portfolio page

--- a/src/mainpages/portfolio.html
+++ b/src/mainpages/portfolio.html
@@ -3,15 +3,20 @@
 
 <p>I currently work on Android and mobile development at Shortcut
 AS. You can find my past and present code on <a href="http://github.com/thomanil">Github</a>. I
-occasionally blog and speak publicly.</p>
+occasionally blog and speak publicly. Some other stuff I currently spend time includes:</p>
 
+<h2><a href="http://webrebels.org">Web Rebels</a> (2012-now)</h2>
 
+<p>I am one of the co-organizers of the annual Web Rebels conference,
+which is an intimate, non-profit community driven conference for
+everyone who loves developing applications and services using web
+technology.</p>
 
+<h2><a href="http://www.meetup.com/GDGOslo/">GDG Oslo</a> (2014-now)</h2>
 
-
-
-
-
+<p>I help organize the local Google Developer Group meetup, GDG
+Oslo. GDG Oslo is a non-profit community that hosts talks, workshops
+and hackathons related to Google-centric tech such as Android, Polymer, Dart, Go etc.</p>
 
 <h1>Past projects</h1>
 
