--- a/src/mainpages/portfolio.html
+++ b/src/mainpages/portfolio.html
@@ -3,7 +3,7 @@
 
 <p>I currently work on Android and mobile development at Shortcut
 AS. You can find my past and present code on <a href="http://github.com/thomanil">Github</a>. I
-occasionally blog and speak publicly. Some other stuff I currently spend time includes:</p>
+occasionally blog and speak publicly. Some other stuff I currently spend time on includes:</p>
 
 <h2><a href="http://webrebels.org">Web Rebels</a> (2012-now)</h2>
 
