Update portfolio, webrebels is now past

--- a/src/mainpages/portfolio.html
+++ b/src/mainpages/portfolio.html
@@ -5,13 +5,6 @@
 AS. You can find my past and present code on <a href="http://github.com/thomanil">Github</a>. I
 occasionally blog and speak publicly. Some other stuff I currently spend time on includes:</p>
 
-<h2><a href="http://webrebels.org">Web Rebels</a> (2012-now)</h2>
-
-<p>I am one of the co-organizers of the annual Web Rebels conference,
-which is an intimate, non-profit community driven conference for
-everyone who loves developing applications and services using web
-technology.</p>
-
 <h2><a href="http://www.meetup.com/GDGOslo/">GDG Oslo</a> (2014-now)</h2>
 
 <p>I help organize the local Google Developer Group meetup, GDG
@@ -19,6 +12,13 @@ Oslo. GDG Oslo is a non-profit community that hosts talks, workshops
 and hackathons related to Google-centric tech such as Android, Polymer, Dart, Go etc.</p>
 
 <h1>Past projects</h1>
+
+<h2><a href="http://webrebels.org">Web Rebels</a> (2012-2015)</h2>
+
+<p>From its beginning I helped organize the annual Web Rebels
+conference, which is an intimate, non-profit community driven
+conference for everyone who loves developing applications and services
+using web technology.</p>
 
 <h2><a href="http://gitorious.org">Gitorious</a> (2011-2013)</h2>
 
