Tweaked basic info

--- a/src/mainpages/cv.html
+++ b/src/mainpages/cv.html
@@ -113,8 +113,7 @@
 		app development agency in Norway. Helped ship multiple
 		high-profile apps on Android (some including custom
 		backend servers and integration and server
-		ops). Served as mentor and junior
-		colleagues.</td></tr>
+		ops). Served as mentor for junior colleagues.</td></tr>
 
 	</table>
 
