--- a/src/mainpages/about.html
+++ b/src/mainpages/about.html
@@ -1,15 +1,9 @@
 <img class="portrait" src="images/bwPortrait.jpg"/>
 
-<p>I'm a software developer &mdash; I do things and make things.</p>
-
-<p>I've earned my living in software since 1999. I'm currently working
-on Android (and mobile web) development at <a href="http://www.shortcut.no">Shortcut AS.</a>
-</p>
-
+<p>I'm a software developer &mdash; I've earned my living in software since 1999.</p>
 
 <p>My current interests include entrepreneurship, design, Unix, high
    level programming languages and pragmatic development methods.</p>
 
-<p>My free time is spent on my wife and two daughters, beer brewing
-and <a href="http://www.sentrumaikido.org">Aikido</a>.
+<p>My free time is spent on my wife and two daughters. I dabble in beer brewing, martial arts and drawing.
 </p>
