--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
-    <link rel="alternate" type="application/atom+xml" href="http://www.kjeldahlnilsson.net/atom.xml" title="Atom 1.0">
-    <title>Thomas Kjeldahl Nilsson</title>
-  </head>
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+		<link rel="alternate" type="application/atom+xml" href="http://www.kjeldahlnilsson.net/atom.xml" title="Atom 1.0">
+		<title>Thomas Kjeldahl Nilsson</title>
+	</head>
 
-  <body>
-    <div id="head">
-      <h1>Thomas Kjeldahl Nilsson</h1>
-    </div>
+	<body>
+		<div id="head">
+			<h1>Thomas Kjeldahl Nilsson</h1>
+		</div>
 
-    <div id="navbar">
-      <ul>
-	<li><a href="index.html">Blog</a></li>
-        <li><a href="about.html">About</a></li>
-	<li><a href="archive.html">Archive</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-	<li><a href="http://twitter.com/thomanil">Twitter</a></li>
-	<li><a href="http://feeds.feedburner.com/ThomasKjeldahlNilssonsBlog">RSS</a></li>
-      </ul>
-    </div>
+		<div id="navbar">
+			<ul>
+				<li><a href="cv.html">CV</a></li>
+				<li><a href="index.html">Blog</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="archive.html">Archive</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="contact.html">Contact</a></li>
+				<li><a href="http://twitter.com/thomanil">Twitter</a></li>
+				<li><a href="http://feeds.feedburner.com/ThomasKjeldahlNilssonsBlog">RSS</a></li>
+			</ul>
+		</div>
 
-    <div id="main">
-      ***CONTENT***
-    </div>
+		<div id="main">
+			***CONTENT***
+		</div>
 
-    <div id="foot">
-      &copy; 2015 Thomas Kjeldahl Nilsson
-    </div>
+		<div id="foot">
+			&copy; 2015 Thomas Kjeldahl Nilsson
+		</div>
 
-    <script type="text/javascript">
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-      try {
-      var pageTracker = _gat._getTracker("UA-8094387-2");
-      pageTracker._trackPageview();
-      } catch(err) {}</script>
-  </body>
+		<script type="text/javascript">
+		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+		</script>
+		<script type="text/javascript">
+		try {
+			var pageTracker = _gat._getTracker("UA-8094387-2");
+			pageTracker._trackPageview();
+		} catch(err) {}</script>
+	</body>
 </html>
