First steps: start tearing stuff out, add mobile breakpoint

--- a/src/mainpages/contact.html
+++ b/src/mainpages/contact.html
@@ -1,5 +1,5 @@
 <p>
 Follow me on <a href="http://twitter.com/thomanil">Twitter</a>, or
 email me
-at <a href="mailo:thomas@kjeldahlnilsson.net">thomas@kjeldahlnilsson.net</a>
+at <a href="mailo:thomas@tknilsson.com">thomas@tknilsson.com</a>
 </p>
