--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 		<link rel="alternate" type="application/atom+xml" href="http://www.kjeldahlnilsson.net/atom.xml" title="Atom 1.0">
 		<title>Thomas Kjeldahl Nilsson</title>
@@ -14,14 +15,21 @@
 
 		<div id="navbar">
 			<ul>
-				<li><a href="cv.html">CV</a></li>
+				<li><a href="index.html">Services</a></li>
+				<li><a href="archive.html">Writing</a></li>
+				<li><a href="contact.html">Contact</a></li>
+
+				<!--
 				<li><a href="index.html">Blog</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="archive.html">Archive</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact.html">Contact</a></li>
-				<li><a href="http://twitter.com/thomanil">Twitter</a></li>
 				<li><a href="http://feeds.feedburner.com/ThomasKjeldahlNilssonsBlog">RSS</a></li>
+				<li><a href="http://twitter.com/thomanil">Twitter</a></li>
+				<li><a href="cv.html">CV</a></li>
+				-->
+
+
+
 			</ul>
 		</div>
 
