Current version of site

--- a/src/mainpages/contact.html
+++ b/src/mainpages/contact.html
@@ -1,5 +1,3 @@
 <p>
-Follow me on <a href="http://twitter.com/thomanil">Twitter</a>, or
-email me
-at <a href="mailo:thomas@tknilsson.com">thomas@tknilsson.com</a>
+I'd love to hear from you! Go ahead an contact me at <a href="mailo:thomas@tknilsson.com">thomas@tknilsson.com</a>
 </p>
