--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -17,6 +17,7 @@
 			<ul>
 				<li><a href="index.html">Services</a></li>
 				<li><a href="archive.html">Writing</a></li>
+				<li><a href="http://twitter.com/thomanil">Twitter</a></li>
 				<li><a href="contact.html">Contact</a></li>
 
 				<!--
@@ -24,7 +25,6 @@
 				<li><a href="about.html">About</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="http://feeds.feedburner.com/ThomasKjeldahlNilssonsBlog">RSS</a></li>
-				<li><a href="http://twitter.com/thomanil">Twitter</a></li>
 				<li><a href="cv.html">CV</a></li>
 				-->
 
@@ -38,7 +38,7 @@
 		</div>
 
 		<div id="foot">
-			&copy; 2015 Thomas Kjeldahl Nilsson
+		<!-- 	&copy; 2015 Thomas Kjeldahl Nilsson  -->
 		</div>
 
 		<script type="text/javascript">
