--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -4,6 +4,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+		<title>Thomas Kjeldahl Nilsson</title>
+		<meta name="description" content="Jeg er en frittstående software-utvikler med over 15 års erfaring</strong>
+	på tvers av mange teknologier og bransjer. Fremfor alt er jeg kompetent, behagelig og trygg å arbeide med: du kommer
+						  til å elske å ha meg i prosjektet ditt!">
+		<meta property="og:url" content="http://tknilsson.com/index.html" />
 		<link rel="alternate" type="application/atom+xml" href="http://www.kjeldahlnilsson.net/atom.xml" title="Atom 1.0">
 		<title>Thomas Kjeldahl Nilsson</title>
 	</head>
