--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -5,10 +5,10 @@
 	<strong>kompetent, behagelig og trygg</strong> å arbeide med &mdash; du kommer
 	til å elske å ha meg i prosjektet ditt!</p>
 
-<p> <blockquote> "...delivered more than we expected in less time than
+<p> <blockquote> “...delivered more than we expected in less time than
 	estimated&hellip; his sound methods and great people skills
 	made a potentially risky development process smooth and
-	rapid." <em>&mdash; Jo Ring Giske</em> </blockquote> </p>
+	rapid.”<em>&mdash; Jo Ring Giske</em> </blockquote> </p>
 
 <p>Hovedekspertisen min er å planlegge, utvikle og vedlikeholde
 programvare-løsninger. Jeg leverer på følgende områder:</p>
@@ -22,9 +22,9 @@ programvare-løsninger. Jeg leverer på følgende områder:</p>
 	<li>Mentoring/coaching av junior-utviklere</li>
 </ul>
 
-<p> <blockquote> "...til tross for en teknisk krevende oppgave,
+<p> <blockquote>“...til tross for en teknisk krevende oppgave,
 	opplevde vi Thomas som svært faglig dyktig, løsningsorientert
-	og imøtekommende. Vi kan anbefale Thomas på det sterkeste."
+	og imøtekommende. Vi kan anbefale Thomas på det sterkeste.”
 	<em>&mdash; Tor Wilhelm Fredriksen</em> </blockquote> </p>
 
 <p>I tillegg har jeg førstehandserfaring med <strong>prosjektledelse, design,
@@ -33,16 +33,16 @@ programvare-løsninger. Jeg leverer på følgende områder:</p>
 	og kan også selv gjøre grunnleggende arbeid der hvis det er
 	nødvendig.</p>
 
-	<blockquote> "[Thomas] is smart, very dedicated, structured
+	<blockquote>“[Thomas] is smart, very dedicated, structured
 		and quality conscious. I have been blessed to have him
 		on several of my projects, where he always helped me
 		stay one step ahead and predict future
-		risks. [&hellip;] Thomas possesses excellent
+		risks. [&hellip;] He possesses excellent
 		communications skills and is very patient and pleasant
 		to work with. On top of that he is very considerate,
 		kind and honest. I give Thomas my very best
 		recommendations, even though I would like to keep him
-		to myself."  <em> &mdash; Ina Tegnander</em>
+		to myself.”<em> &mdash; Ina Tegnander</em>
 		</blockquote> </p>
 
 <p><strong>Skal vi gjøre noe sammen?</strong> Jeg tar gjerne en
