--- a/src/mainpages/contact.html
+++ b/src/mainpages/contact.html
@@ -1,3 +1,5 @@
 <p>
 I'd love to hear from you! Go ahead an contact me at <a href="mailo:thomas@tknilsson.com">thomas@tknilsson.com</a>
 </p>
+
+<span class="contact-button"><a href="mailto:thomas@tknilsson.com">Get in touch!</a></span>
