--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -30,8 +30,7 @@ programvare-løsninger. Jeg leverer på følgende områder:</p>
 <p>I tillegg har jeg førstehandserfaring med <strong>prosjektledelse, design,
 	markedsføring og entreprenørskap</strong>. Jeg arbeider
 	spesielt godt sammen med profesjonelle folk på disse feltene,
-	og kan også selv gjøre grunnleggende arbeid der hvis det er
-	nødvendig.</p>
+	og kan også selv gjøre grunnleggende arbeid der ved behov.</p>
 
 	<blockquote>“[Thomas] is smart, very dedicated, structured
 		and quality conscious. I have been blessed to have him
