--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 		<title>Thomas Kjeldahl Nilsson</title>
-		<meta name="description" content="Jeg er en frittstående software-utvikler med over 15 års erfaring</strong>
+		<meta name="description" content="Jeg er en frittstående software-utvikler med over 15 års erfaring
 	på tvers av mange teknologier og bransjer. Fremfor alt er jeg kompetent, behagelig og trygg å arbeide med: du kommer
 						  til å elske å ha meg i prosjektet ditt!">
 		<meta property="og:url" content="http://tknilsson.com/index.html" />
