--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -11,13 +11,15 @@
 	rapid.”<em>&mdash; Jo Ring Giske</em> </blockquote> </p>
 
 <p>Hovedekspertisen min er å planlegge, utvikle og vedlikeholde
-programvare-løsninger. Jeg leverer på følgende områder:</p>
+programvare-løsninger. Har også evnen til å se det store bildet og
+hjelpe forretningssiden med å ta riktige valg. Jeg leverer på følgende
+områder:</p>
 
 <ul>
 	<li>Web frontend</li>
 	<li>Android</li>
 	<li>Backend og devops</li>
-	<li>Systemarkitektur</li>
+	<li>System/løsnings-arkitektur</li>
 	<li>Java, Ruby, JavaScript, med fler</li>
 	<li>Mentoring/coaching av junior-utviklere</li>
 </ul>
