--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -3,7 +3,7 @@
 <p>Jeg er en frittstående software-utvikler med <strong>over 15 års erfaring</strong>
 	på tvers av mange teknologier og bransjer. Fremfor alt er jeg
 	<strong>kompetent, behagelig og trygg</strong> å arbeide med &mdash; du kommer
-	til å elske å ha meg i prosjektet ditt!</p>
+	til å elske å ha meg med på prosjektet ditt!</p>
 
 <p> <blockquote> “...delivered more than we expected in less time than
 	estimated&hellip; his sound methods and great people skills
