--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -47,8 +47,10 @@ områder:</p>
 		</blockquote> </p>
 
 <p><strong>Skal vi gjøre noe sammen?</strong> Jeg tar gjerne en
-uforpliktende prat over en kaffe. Er åpen for både korte og langvarige
-oppdrag, og leverer onsite i Oslo-området eller remote andre steder i
-landet (med jevnlige on-site besøk).</p>
+	uforpliktende prat over en kaffe.</p>
+
+	<p>Er åpen for både korte og langvarige oppdrag, og leverer
+onsite i Oslo-området eller remote andre steder i landet (med jevnlige
+on-site besøk).</p>
 
 <span class="contact-button"><a href="mailto:thomas@tknilsson.com?subject=La oss ta en prat">La oss ta en prat!</a></span>
