--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -11,8 +11,8 @@
 	rapid.”<em>&mdash; Jo Ring Giske</em> </blockquote> </p>
 
 <p>Hovedekspertisen min er å planlegge, utvikle og vedlikeholde
-programvare-løsninger. Har også evnen til å se det store bildet og
-hjelpe forretningssiden med å ta riktige valg. Jeg leverer på følgende
+programvare-løsninger, samt å "se det store bildet" og hjelpe
+forretningssiden med å ta riktige valg. Jeg leverer på følgende
 områder:</p>
 
 <ul>
