--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -20,7 +20,7 @@ områder:</p>
 	<li>Android</li>
 	<li>Backend og devops</li>
 	<li>System/løsnings-arkitektur</li>
-	<li>Java, Ruby, JavaScript, med fler</li>
+	<li>Java, Ruby, JavaScript, med flere</li>
 	<li>Mentoring/coaching av junior-utviklere</li>
 </ul>
 
@@ -49,7 +49,7 @@ områder:</p>
 <p><strong>Skal vi gjøre noe sammen?</strong> Jeg tar gjerne en
 	uforpliktende prat over en kaffe.</p>
 
-	<p>Er åpen for både korte og langvarige oppdrag, og leverer
+	<p>Jeg er åpen for både korte og langvarige oppdrag, og leverer
 onsite i Oslo-området eller remote andre steder i landet (med jevnlige
 on-site besøk).</p>
 
