--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -51,6 +51,6 @@ områder:</p>
 
 	<p>Jeg er åpen for både korte og langvarige oppdrag, og leverer
 onsite i Oslo-området eller remote andre steder i landet (med jevnlige
-on-site besøk).</p>
+onsite besøk).</p>
 
 <span class="contact-button"><a href="mailto:thomas@tknilsson.com?subject=La oss ta en prat">La oss ta en prat!</a></span>
