--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -10,6 +10,9 @@
 						  til å elske å ha meg med på prosjektet ditt!">
 		<meta property="og:url" content="http://tknilsson.com/index.html" />
 		<link rel="alternate" type="application/atom+xml" href="http://www.kjeldahlnilsson.net/atom.xml" title="Atom 1.0">
+
+		<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+
 		<title>Thomas Kjeldahl Nilsson</title>
 	</head>
 
