Add to meta descr

--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -7,7 +7,8 @@
 		<title>Thomas Kjeldahl Nilsson</title>
 		<meta name="description" content="Jeg er en frittstående software-utvikler med over 15 års erfaring
 	på tvers av mange teknologier og bransjer. Fremfor alt er jeg kompetent, behagelig og trygg å arbeide med: du kommer
-						  til å elske å ha meg med på prosjektet ditt!">
+						  til å elske å ha meg med på prosjektet ditt! Jeg er åpen for både korte og langvarige oppdrag,
+						  og leverer onsite i Oslo-området eller remote til hele landet.">
 		<meta property="og:url" content="http://tknilsson.com/index.html" />
 		<link rel="alternate" type="application/atom+xml" href="http://www.kjeldahlnilsson.net/atom.xml" title="Atom 1.0">
 
