--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -32,7 +32,7 @@ områder:</p>
 <p>I tillegg har jeg førstehandserfaring med <strong>prosjektledelse, design,
 	markedsføring og entreprenørskap</strong>. Jeg arbeider
 	spesielt godt sammen med profesjonelle folk på disse feltene,
-	og kan også selv gjøre grunnleggende arbeid der ved behov.</p>
+	og kan også selv gjøre grunnleggende arbeid på disse områdene ved behov.</p>
 
 	<blockquote>“[Thomas] is smart, very dedicated, structured
 		and quality conscious. I have been blessed to have him
@@ -51,6 +51,6 @@ områder:</p>
 
 	<p>Jeg er åpen for både korte og langvarige oppdrag, og leverer
 onsite i Oslo-området eller remote andre steder i landet (med jevnlige
-onsite besøk).</p>
+onsite besøk). Jeg har tilgjengelig tid fra og med <span class="time"">januar 2016<span>.</p>
 
 <span class="contact-button"><a href="mailto:thomas@tknilsson.com?subject=La oss ta en prat">La oss ta en prat!</a></span>
