--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -10,8 +10,8 @@
 	made a potentially risky development process smooth and
 	rapid.”<em>&mdash; Jo Ring Giske</em> </blockquote> </p>
 
-<p>Hovedekspertisen min er å planlegge, utvikle og vedlikeholde
-programvare-løsninger, samt å "se det store bildet" og hjelpe
+<p>Hovedekspertisen min er å <strong>planlegge, utvikle og
+vedlikeholde skreddersøm programvare</strong>, samt å "se det store bildet" og hjelpe
 forretningssiden med å ta riktige valg. Jeg leverer på følgende
 områder:</p>
 
