--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -3,7 +3,7 @@
 <p>Jeg er en frittstående software-utvikler med <strong>over 15 års erfaring</strong>
 	på tvers av mange teknologier og bransjer. Fremfor alt er jeg
 	<strong>kompetent, behagelig og trygg</strong> å arbeide med &mdash; du kommer
-	til å elske å ha meg med på prosjektet ditt!</p>
+	til å elske å ha meg på prosjektet ditt!</p>
 
 <p> <blockquote> “...delivered more than we expected in less time than
 	estimated&hellip; his sound methods and great people skills
@@ -49,8 +49,8 @@ områder:</p>
 <p><strong>Skal vi gjøre noe sammen?</strong> Jeg tar gjerne en
 	uforpliktende prat over en kaffe.</p>
 
-	<p>Jeg er åpen for både korte og langvarige oppdrag, og leverer
-onsite i Oslo-området eller remote andre steder i landet (med jevnlige
-onsite besøk). Jeg har tilgjengelig tid fra og med <span class="time"">januar 2016<span>.</p>
+	<p>Jeg tar både korte og langvarige oppdrag, og
+leverer onsite i Oslo-området eller remote andre steder i landet (med
+jevnlige fysiske besøk). Jeg har tilgjengelig tid fra og med <span class="time"">januar 2016<span>.</p>
 
-<span class="contact-button"><a href="mailto:thomas@tknilsson.com?subject=La oss ta en prat">La oss ta en prat!</a></span>
+		<p><span class="contact-button"><a href="mailto:thomas@tknilsson.com?subject=La oss ta en prat">La oss ta en prat!</a></span></p>
