Specialize it a bit

--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -12,15 +12,21 @@
 
 <p>Hovedekspertisen min er å <strong>planlegge, utvikle og
 vedlikeholde skreddersøm programvare</strong>, samt å "se det store bildet" og hjelpe
-forretningssiden med å ta riktige valg. Jeg leverer på følgende
-områder:</p>
+forretningssiden med å ta riktige valg.</p>
+
+<p>Følgende fagfelter er spesialitetene mine:
 
 <ul>
 	<li>Web frontend</li>
 	<li>Android</li>
+	<li>Java, Ruby, JavaScript, med flere</li>
+</ul>
+
+<p>Jeg har også solid erfaring på følgende felter:
+
+<ul>
 	<li>Backend og devops</li>
 	<li>System/løsnings-arkitektur</li>
-	<li>Java, Ruby, JavaScript, med flere</li>
 	<li>Mentoring/coaching av junior-utviklere</li>
 </ul>
 
