Tweaked landing page further, added cv

--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -28,13 +28,14 @@
 				<li><a href="archive.html">Writing</a></li>
 				<li><a href="http://twitter.com/thomanil">Twitter</a></li>
 				<li><a href="contact.html">Contact</a></li>
+				<li><a href="http://kjeldahlnilsson.net/shared/thomas-kjeldahl-nilsson-cv.pdf">CV</a></li>
+
 
 				<!--
 				<li><a href="index.html">Blog</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="http://feeds.feedburner.com/ThomasKjeldahlNilssonsBlog">RSS</a></li>
-				<li><a href="cv.html">CV</a></li>
 				-->
 
 
