--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -1,32 +1,33 @@
 
 
-<p>Jeg er en frittstående software-utvikler med <strong>over 15 års erfaring</strong>
-	på tvers av mange teknologier og bransjer. Fremfor alt er jeg
-	<strong>kompetent, behagelig og trygg</strong> å arbeide med &mdash; du kommer
-	til å elske å ha meg på prosjektet ditt!</p>
+<p>
+	Jeg er en frittstående software-utvikler med <strong>over 15 års
+	erfaring</strong> på tvers av mange teknologier og bransjer. Fremfor
+	alt er jeg <strong>kompetent, behagelig og trygg</strong> å
+	arbeide med — du kommer til å trives med meg på prosjektet
+	ditt!
+</p>
 
 <p> <blockquote> “...delivered more than we expected in less time than
 	estimated&hellip; his sound methods and great people skills
 	made a potentially risky development process smooth and
 	rapid.”<em>&mdash; Jo Ring Giske</em> </blockquote> </p>
 
-<p>Hovedekspertisen min er å <strong>planlegge, utvikle og
-vedlikeholde skreddersøm programvare</strong>, samt å "se det store bildet" og hjelpe
-forretningssiden med å ta riktige valg.</p>
-
-<p>Følgende fagfelter er spesialitetene mine:
+<p>Følgende fagfelter er spesialitetene mine:</p>
 
 <ul>
 	<li>Web frontend</li>
 	<li>Android</li>
-	<li>Java, Ruby, JavaScript, med flere</li>
+	<li>System og løsnings-arkitektur</li>
+	<li>Programmering i språk som Java, JavaScript, Ruby med flere</li>
 </ul>
 
-<p>Jeg har også solid erfaring på følgende felter:
+<p>Jeg har også solid erfaring på følgende felter:</p>
 
 <ul>
-	<li>Backend og devops</li>
-	<li>System/løsnings-arkitektur</li>
+	<li>Backend/server-utvikling</li>
+	<li>Teknisk prosjektledelse</li>
+	<li>Devops</li>
 	<li>Mentoring/coaching av junior-utviklere</li>
 </ul>
 
@@ -35,28 +36,30 @@ forretningssiden med å ta riktige valg.</p>
 	og imøtekommende. Vi kan anbefale Thomas på det sterkeste.”
 	<em>&mdash; Tor Wilhelm Fredriksen</em> </blockquote> </p>
 
-<p>I tillegg har jeg førstehandserfaring med <strong>prosjektledelse, design,
+<p>I tillegg har jeg førstehåndserfaring med <strong>prosjektledelse, design,
 	markedsføring og entreprenørskap</strong>. Jeg arbeider
 	spesielt godt sammen med profesjonelle folk på disse feltene,
 	og kan også selv gjøre grunnleggende arbeid på disse områdene ved behov.</p>
 
-	<blockquote>“[Thomas] is smart, very dedicated, structured
-		and quality conscious. I have been blessed to have him
-		on several of my projects, where he always helped me
-		stay one step ahead and predict future
-		risks. [&hellip;] He possesses excellent
-		communications skills and is very patient and pleasant
-		to work with. On top of that he is very considerate,
-		kind and honest. I give Thomas my very best
-		recommendations, even though I would like to keep him
-		to myself.”<em> &mdash; Ina Tegnander</em>
-		</blockquote> </p>
+<blockquote>“[Thomas] is smart, very dedicated, structured
+	and quality conscious. I have been blessed to have him
+	on several of my projects, where he always helped me
+	stay one step ahead and predict future
+	risks. [&hellip;] He possesses excellent
+	communications skills and is very patient and pleasant
+	to work with. On top of that he is very considerate,
+	kind and honest. I give Thomas my very best
+	recommendations, even though I would like to keep him
+	to myself.”<em> &mdash; Ina Tegnander</em>
+</blockquote>
 
-<p><strong>Skal vi gjøre noe sammen?</strong> Jeg tar gjerne en
-	uforpliktende prat over en kaffe.</p>
+<p><strong>Vi bør jobbe sammen!</strong> Hva med et uforpliktende møte over en kaffe?</p>
 
-	<p>Jeg tar både korte og langvarige oppdrag, og
-leverer onsite i Oslo-området eller remote andre steder i landet (med
-jevnlige fysiske besøk). Jeg har tilgjengelig tid fra og med <span class="time"">januar 2016<span>.</p>
+<p>Jeg tar både korte og langvarige oppdrag, og leverer lokalt
+	"on-site" i Oslo-området eller remote andre steder i landet
+	(med jevnlige lokale besøk). Jeg har tilgjengelig tid fra og
+	med <span class="time"">januar 2016<span>.</p>
 
-		<p><span class="contact-button"><a href="mailto:thomas@tknilsson.com?subject=La oss ta en prat">La oss ta en prat!</a></span></p>
+	<p><span class="contact-button"><a href="mailto:thomas@tknilsson.com?subject=La oss ta en prat">La oss ta en prat!</a></span></p>
+
+	<p><strong><a id="cv-download-link" href="http://kjeldahlnilsson.net/shared/thomas-kjeldahl-nilsson-cv.pdf">Last ned CV (pdf)</a></strong></p>
