--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -62,4 +62,4 @@
 
 	<p><span class="contact-button"><a href="mailto:thomas@tknilsson.com?subject=La oss ta en prat">La oss ta en prat!</a></span></p>
 
-	<p><strong><a id="cv-download-link" href="http://kjeldahlnilsson.net/shared/thomas-kjeldahl-nilsson-cv.pdf">Last ned CV (pdf)</a></strong></p>
+	<p><strong><a id="cv-download-link" href="/shared/thomas-kjeldahl-nilsson-cv.pdf">Last ned CV (pdf)</a></strong></p>
