--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -28,7 +28,7 @@
 				<li><a href="archive.html">Writing</a></li>
 				<li><a href="http://twitter.com/thomanil">Twitter</a></li>
 				<li><a href="contact.html">Contact</a></li>
-				<li><a href="http://kjeldahlnilsson.net/shared/thomas-kjeldahl-nilsson-cv.pdf">CV</a></li>
+				<li><a href="/shared/thomas-kjeldahl-nilsson-cv.pdf">CV</a></li>
 
 
 				<!--
