Make visual cv canonical, add linkedin link

--- a/src/mainpages/cv.html
+++ b/src/mainpages/cv.html
@@ -1,6 +1,12 @@
 
 <div id="content" >
 
+	<script>
+	/*Redirect to newer, generated pdf version of my CV*/
+	window.location = "/shared/thomas-kjeldahl-nilsson-cv.pdf";
+	</script>
+
+
 	<!--
 	<p>
 	<strong>Short, printer-friendly version (in Norwegian):</strong> <a href="cv.pdf">PDF</a>
