--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -1,50 +1,45 @@
 
-
 <p>
-	Jeg er en frittstående software-utvikler med <strong>over 15 års
-	erfaring</strong> på tvers av mange teknologier og bransjer. Fremfor
-	alt er jeg <strong>kompetent, behagelig og trygg</strong> å
-	arbeide med — du kommer til å trives med meg på prosjektet
-	ditt!
+	I'm an independent software developer with over fifteen years
+	experience. Clients find me to be <strong>competent, reliable and
+	above all very easy to work with.</strong>
 </p>
 
 <p> <blockquote> “...delivered more than we expected in less time than
 	estimated&hellip; his sound methods and great people skills
 	made a potentially risky development process smooth and
-	rapid.”<em>&mdash; Jo Ring Giske</em> </blockquote> </p>
+	rapid.”<em>&mdash; Jo Ring Giske, Enterprise Architect at Mattilsynet</em> </blockquote> </p>
 
-<p>Jeg tar både korte og langvarige oppdrag, og leverer lokalt
-	"on-site" i Oslo-området eller remote andre steder i landet
-	(med jevnlige lokale besøk). Jeg har tilgjengelig tid fra og
-	med <span class="time"">januar 2016<span>.</p>
+<p>I'm available for both small and large projects, on-site
+in the Oslo region in Norway, or remotely anywhere (with occasional on-site
+visits).</p>
 
-<p>Følgende fagfelter er spesialitetene mine:</p>
+<p>These are my specialties:</p>
 
 <ul>
-	<li>Web frontend</li>
-	<li>Android</li>
-	<li>System og løsnings-arkitektur</li>
-	<li>Programmering i språk som Java, JavaScript, Ruby med flere</li>
+	<li>Web frontend development</li>
+	<li>Android app development</li>
+	<li>System architecture</li>
+	<li>Java, JavaScript and Ruby programming</li>
 </ul>
 
-<p>Jeg har også solid erfaring på følgende felter:</p>
+<p>I also have broad, solid experience in:</p>
 
 <ul>
-	<li>Backend/server-utvikling</li>
-	<li>Teknisk prosjektledelse</li>
+	<li>Backend/server development</li>
+	<li>Project management</li>
 	<li>Devops</li>
-	<li>Mentoring/coaching av junior-utviklere</li>
+	<li>Mentoring and teaching</li>
 </ul>
 
-<p> <blockquote>“...til tross for en teknisk krevende oppgave,
-	opplevde vi Thomas som svært faglig dyktig, løsningsorientert
-	og imøtekommende. Vi kan anbefale Thomas på det sterkeste.”
-	<em>&mdash; Tor Wilhelm Fredriksen</em> </blockquote> </p>
+<p> <blockquote>“Thomas is a man of many talents, and a pleasure to work with. His
+    practical professionalism has helped get difficult projects back on
+    track, and both clients and colleagues have appreciated his focus on
+    options and tradeoffs when prioritizing.”
+	<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote> </p>
 
-<p>I tillegg har jeg førstehåndserfaring med <strong>prosjektledelse, design,
-	markedsføring og entreprenørskap</strong>. Jeg arbeider
-	spesielt godt sammen med profesjonelle folk på disse feltene,
-	og kan også selv gjøre grunnleggende arbeid på disse områdene ved behov.</p>
+<p>Additionally I also have first hand experience in <strong>UI/UX
+design work, marketing, project management and entrepreneurship.</strong> I can do basic work in these fields myself, and I collaborate extremely well with specialists in these areas.
 
 <blockquote>“[Thomas] is smart, very dedicated, structured
 	and quality conscious. I have been blessed to have him
@@ -55,11 +50,11 @@
 	to work with. On top of that he is very considerate,
 	kind and honest. I give Thomas my very best
 	recommendations, even though I would like to keep him
-	to myself.”<em> &mdash; Ina Tegnander</em>
+	to myself.”<em> &mdash; Ina Tegnander, project manager at Shortcut AS</em>
 </blockquote>
 
-<p><strong>Vi bør jobbe sammen!</strong> Hva med et uforpliktende møte over en kaffe?</p>
+<p><strong>We should work together!</strong> Feel free to get in touch for a friendly conversation, possibly over coffee if you are local. I'll buy. :)</p>
 
-	<p><span class="contact-button"><a href="mailto:thomas@tknilsson.com?subject=La oss ta en prat">La oss ta en prat!</a></span></p>
+	<p><span class="contact-button"><a href="mailto:thomas@tknilsson.com">Yes, let's talk!</a></span></p>
 
-	<p><strong><a id="cv-download-link" href="https://www.visualcv.com/thomas-kjeldahl-nilsson?access=615r89E8Y3h">Last ned CV (pdf)</a></strong></p>
+	<p><strong><a id="cv-download-link" href="https://www.visualcv.com/thomas-kjeldahl-nilsson?access=615r89E8Y3h">Download CV (pdf)</a></strong></p>
