--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -17,8 +17,8 @@ visits).</p>
 <p>These are my specialties:</p>
 
 <ul>
-	<li>Web frontend development</li>
-	<li>Android app development</li>
+	<li>Web development</li>
+	<li>Android development</li>
 	<li>System architecture</li>
 	<li>Java, JavaScript and Ruby programming</li>
 </ul>
