--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -1,8 +1,8 @@
 
 <p>
 	I'm an independent software developer with over fifteen years
-	experience. Clients find me to be <strong>competent, reliable and
-	above all very easy to work with.</strong>
+	experience. Clients find me to be <strong>competent, reliable
+	and extremely easy to work with.</strong>
 </p>
 
 <p> <blockquote> “...delivered more than we expected in less time than
@@ -12,7 +12,13 @@
 
 <p>I'm available for both small and large projects, on-site
 in the Oslo region in Norway, or remotely anywhere (with occasional on-site
-visits).</p>
+	visits). <em>I currently have available time starting January 2016.</em> </p>
+
+<blockquote>“Thomas is a man of many talents, and a pleasure to work with. His
+    practical professionalism has helped get difficult projects back on
+    track, and both clients and colleagues have appreciated his focus on
+    options and tradeoffs when prioritizing.”
+	<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote>
 
 <p>These are my specialties:</p>
 
@@ -32,14 +38,11 @@ visits).</p>
 	<li>Mentoring and teaching</li>
 </ul>
 
-<p> <blockquote>“Thomas is a man of many talents, and a pleasure to work with. His
-    practical professionalism has helped get difficult projects back on
-    track, and both clients and colleagues have appreciated his focus on
-    options and tradeoffs when prioritizing.”
-	<em>&mdash; Marius Mårnes Mathisen, Chief Strategy Officer at Shortcut AS</em> </blockquote> </p>
+<p>Additionally I have first hand experience in <strong>UI/UX
+design work, marketing, project management and entrepreneurship.</strong> I
+can do basic work in these fields myself, and I collaborate extremely
+	well with specialists in these areas.</p>
 
-<p>Additionally I also have first hand experience in <strong>UI/UX
-design work, marketing, project management and entrepreneurship.</strong> I can do basic work in these fields myself, and I collaborate extremely well with specialists in these areas.
 
 <blockquote>“[Thomas] is smart, very dedicated, structured
 	and quality conscious. I have been blessed to have him
