Tweak meta descr and services pitch

--- a/src/mainpages/layout.html
+++ b/src/mainpages/layout.html
@@ -4,16 +4,12 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
-		<title>Thomas Kjeldahl Nilsson</title>
-		<meta name="description" content="Jeg er en frittstående software-utvikler med over 15 års erfaring
-	på tvers av mange teknologier og bransjer. Fremfor alt er jeg kompetent, behagelig og trygg å arbeide med: du kommer
-						  til å elske å ha meg med på prosjektet ditt! Jeg er åpen for både korte og langvarige oppdrag,
-						  og leverer onsite i Oslo-området eller remote til hele landet.">
+		<meta name="description" content="Freelance software developer with over fifteen years
+						  experience. Clients consider me competent, reliable
+						  and extremely easy to work with. Get in touch!">
 		<meta property="og:url" content="http://tknilsson.com/index.html" />
 		<link rel="alternate" type="application/atom+xml" href="http://www.kjeldahlnilsson.net/atom.xml" title="Atom 1.0">
-
 		<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-
 		<title>Thomas Kjeldahl Nilsson</title>
 	</head>
 
@@ -49,7 +45,7 @@
 		</div>
 
 		<div id="foot">
-		<!-- 	&copy; 2015 Thomas Kjeldahl Nilsson  -->
+			<!-- 	&copy; 2015 Thomas Kjeldahl Nilsson  -->
 		</div>
 
 		<script type="text/javascript">
