--- a/src/mainpages/services.html
+++ b/src/mainpages/services.html
@@ -22,26 +22,32 @@ in the Oslo region in Norway, or remotely anywhere (with occasional on-site
 
 <p>These are my specialties:</p>
 
+<strong>
 <ul>
 	<li>Web development</li>
 	<li>Android development</li>
 	<li>System architecture</li>
 	<li>Java, JavaScript and Ruby programming</li>
 </ul>
+</strong>
 
 <p>I also have broad, solid experience in:</p>
 
+<strong>
 <ul>
 	<li>Backend/server development</li>
 	<li>Project management</li>
 	<li>Devops</li>
 	<li>Mentoring and teaching</li>
 </ul>
+</strong>
 
-<p>Additionally I have first hand experience in <strong>UI/UX
-design work, marketing, project management and entrepreneurship.</strong> I
-can do basic work in these fields myself, and I collaborate extremely
-	well with specialists in these areas.</p>
+<p>Finally, I also have basic skills and grounding in <strong>UI/UX
+design work, marketing, project management and entrepreneurship.</strong> However: while
+I can do supporting work in these fields myself, what you
+<em>really</em> want is to have me collaborate with a specialist in
+any of these disciplines: then we'll both really shine.
+</p>
 
 
 <blockquote>“[Thomas] is smart, very dedicated, structured
